--- a/Gestion-Immobilier-Django--main/immobilier/templates/immobilier_detail.html
+++ b/Gestion-Immobilier-Django--main/immobilier/templates/immobilier_detail.html
@@ -181,9 +181,9 @@
             <div class="modal-body">
                 <p class="lead">Pour plus d'informations, contactez-nous :</p>
                 <ul class="list-unstyled">
-                    <li><i class="fas fa-phone me-2"></i>+33 6 12 34 56 78</li>
-                    <li><i class="fas fa-envelope me-2"></i>contact@immobilier.com</li>
-                    <li><i class="fas fa-map-marker-alt me-2"></i>Paris, France</li>
+                    <li><i class="fas fa-phone me-2"></i>0771339972</li>
+                    <li><i class="fas fa-envelope me-2"></i>contactDADA@immobilier.com</li>
+                    <li><i class="fas fa-map-marker-alt me-2"></i>Rabat, Maroc</li>
                 </ul>
             </div>
         </div>
